# StillFantasy

./: .gitignore  CMakeLists.txt  fantasy_readme.md  readme.md
cmake/: cuda.cmake
demo/: CMakeLists.txt  main.cpp  main_engine.cpp  main_qwen.cpp  main_qwen3.cpp
docs/: buffer_and_alloc.md  cuda_memory_optimization.md
stillfantasy/include/base/: alloc.h  base.h  buffer.h  tick.h
stillfantasy/include/engine/: block.h  scheduler.h  sequence.h
stillfantasy/include/model/: config.h  llama3.h  model.h  qwen2.h  qwen3.h
stillfantasy/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
stillfantasy/include/sampler/: argmax_sampler.h  sampler.h
stillfantasy/include/tensor/: tensor.h
stillfantasy/source/base/: alloc_cpu.cpp
stillfantasy/source/engine/: block.cpp  scheduler.cpp  sequence.cpp
stillfantasy/source/model/: llama3.cpp  model.cpp  qwen2.cpp  qwen3.cpp
stillfantasy/source/op/: add.cpp  embedding.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
stillfantasy/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
stillfantasy/source/op/kernels/cpu/: add_kernel.h  emb_kernel.h
stillfantasy/source/op/kernels/cuda/: add_kernel.cu  cast_kernel.cu  cast_kernel.cuh  emb_kernel.cu  matmul_kernel.cu  mha_kernel.cu  rmsnorm_kernel.cu  rope_kernel.cu  swiglu_kernel.cu
stillfantasy/source/sampler/: argmax_sampler.cpp
stillfantasy/source/tensor/: tensor.cpp
test/: CMakeLists.txt
test/test_op/: test_load.cpp
