
add_executable(still_fantasy main.cpp)
target_link_directories(still_fantasy PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(still_fantasy StillFantasy)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT")
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(still_fantasy absl::base re2::re2 nlohmann_json::nlohmann_json)
endif ()
# main_engine（Prefix Cache + Continuous Batching）在任一模型启用时均可编译
if (LLAMA3_SUPPORT OR QWEN2_SUPPORT OR QWEN3_SUPPORT)
    if (NOT TARGET absl::base)
        find_package(absl REQUIRED)
        find_package(re2 REQUIRED)
        find_package(nlohmann_json REQUIRED)
    endif ()
    add_executable(main_engine main_engine.cpp)
    target_link_directories(main_engine PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    target_link_libraries(main_engine StillFantasy absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(main_engine PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()
set_target_properties(still_fantasy PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

if (QWEN2_SUPPORT)
    message(STATUS "LINK QWEN2 SUPPORT")
    add_executable(qwen_infer main_qwen.cpp)
    target_link_directories(qwen_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen_infer StillFantasy)
    target_link_libraries(qwen_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
elseif (QWEN3_SUPPORT)
    message(STATUS "LINK QWEN3 SUPPORT")
    add_executable(qwen3_infer main_qwen3.cpp)
    target_link_directories(qwen3_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen3_infer StillFantasy)
    target_link_libraries(qwen3_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen3_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()